# vishwa-agent

./: .env.example  INTERACTIVE_BUTTONS.md  LICENSE  QUICKSTART.md  README.md  fibonacci.py  install.ps1  install.sh  models.json  package-lock.json  pyproject.toml  pyramid.py  quickstart.bat  quickstart.sh  requirements.txt  setup_env.py  test_codebase_explorer.py  test_error_handling.py  test_install.py  test_interactive_buttons.py  test_subagents_v2.py
docs/: AUTOCOMPLETE-SETUP.md  AUTOCOMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  INTERACTIVE_TUI_DESIGN.md  LLM_API_COMPARISON.md  SETUP.md  USAGE.md
examples/: demo.py  session_example.json
src/vishwa/: __init__.py  __main__.py  config.py
src/vishwa/agent/: __init__.py  context.py  context_store.py  core.py
src/vishwa/autocomplete/: __init__.py  __main__.py  cache.py  context_builder.py  protocol.py  service.py  suggestion_engine.py
src/vishwa/autocomplete/rl/: features.py  policy.py  reward.py  storage.py  strategies.py
src/vishwa/cli/: __init__.py  command_completer.py  commands.py  file_completer.py  interactive.py  merged_completer.py  ui.py
src/vishwa/code_intelligence/: __init__.py  dependencies.py  repo_map.py  repo_map_cache.py  smart_reader.py  treesitter_parser.py
src/vishwa/llm/: __init__.py  anthropic_provider.py  base.py  config.py  factory.py  fallback.py  novita_provider.py  ollama_provider.py  openai_provider.py  response.py
src/vishwa/lsp/: __init__.py  client.py  config.py  document_manager.py  protocol.py  server_manager.py
src/vishwa/prompts/: README.md  __init__.py  platform_unix.txt  platform_windows.txt  system_prompt.txt  system_prompt_old_backup.txt
src/vishwa/session/: __init__.py  manager.py
src/vishwa/state/: __init__.py
src/vishwa/tools/: __init__.py  analyze.py  base.py  bash.py  cache.py  code_quality.py  codebase_explorer.py  file_ops.py  git_ops.py  lsp_tools.py  parallel_executor.py  performance.py  proactive_context.py  schema_optimizer.py  search.py  streaming.py  task.py  todo.py  web.py
src/vishwa/utils/: __init__.py  logger.py
tests/: __init__.py  test_agent_integration.py  test_autocomplete_rl.py  test_lsp_tools.py  test_repo_map.py  test_subagent_models.py
vscode-extension/: README.md  package-lock.json  package.json  vishwa-autocomplete-0.1.0.vsix
vscode-extension/src/: client.ts  extension.ts  provider.ts
website/: index.html  script.js  styles.css
